--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,6 +1,14 @@
 
 <h1>Artworks#index</h1>
-
+<ul>
 <% @tweets.each do |tweet| %>
-  <%= tweet.text %>
+  <li>
+    <%= tweet.text %> 
+    <%# tweet.in_reply_to_status_id %>
+    <% if tweet.attrs[:entities][:media] %>
+      <img src="<%= tweet.attrs[:entities][:media][0][:media_url] %>"> 
+    <% end %>
+
+  </li>
 <% end %>
+</ul>
