--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,13 +1,14 @@
 
 <h1>Artworks#index</h1>
-<ul>
+<ul class="list-unstyled">
 <% @tweets.each do |tweet| %>
-  <li>
-    <%= tweet.text %> 
+  <li> 
     <%# tweet.in_reply_to_status_id %>
     <% if tweet.attrs[:entities][:media] %>
       <img src="<%= tweet.attrs[:entities][:media][0][:media_url] %>"> 
     <% end %>
+    <br>
+    <%= tweet.text %>
 
   </li>
 <% end %>
