--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,15 +1,22 @@
 
 <h1>Artworks#index</h1>
 <ul class="list-unstyled">
-<% @tweets.each do |tweet| %>
+<% @answered_ids = [] %>
+<% @tweets[:timeline].each do |tweet| %>
   <li> 
-    <%# tweet.in_reply_to_status_id %>
     <% if tweet.attrs[:entities][:media] %>
       <img src="<%= tweet.attrs[:entities][:media][0][:media_url] %>"> 
     <% end %>
     <br>
     <%= tweet.text %>
-
+    <%# tweet.in_reply_to_status_id %>
+    <% if @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.size != 0 %>
+      <%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.text %>
+    <% end %>
   </li>
+
 <% end %>
 </ul>
+
+
+
