--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,22 +1,41 @@
 
-<h1>Artworks#index</h1>
-<ul class="list-unstyled">
-<% @answered_ids = [] %>
-<% @tweets[:timeline].each do |tweet| %>
-  <li> 
-    <% if tweet.attrs[:entities][:media] %>
-      <img src="<%= tweet.attrs[:entities][:media][0][:media_url] %>"> 
-    <% end %>
-    <br>
-    <%= tweet.text %>
-    <%# tweet.in_reply_to_status_id %>
-    <% if @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.size != 0 %>
-      <%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.text %>
-    <% end %>
-  </li>
+<h1>NonPrintingCharacter</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
 
-<% end %>
-</ul>
+      <ul class="list-unstyled">
+      <% @answered_ids = [] %>
+      <% @tweets[:timeline].each do |tweet| %>
+        <li> 
+            <% if @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.size != 0 %>
 
+          <div class="container">
+            <div class="row">
 
+              <img src="<%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.attrs[:user][:profile_image_url] %>">
+
+              <p><strong><%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.attrs[:user][:name] %></strong></p>
+
+              <p><%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.text %></p>
+
+            </div>
+          </div>
+
+          <% end %>
+
+          <% if tweet.attrs[:entities][:media] %>
+           <div> <img src="<%= tweet.attrs[:entities][:media][0][:media_url] %>"></div> 
+          <% end %>
+          <br>
+          <div><%= tweet.text %></div>
+          <%# tweet.in_reply_to_status_id %>
+
+        </li>
+
+      <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
 
