--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,8 +18,8 @@
       <% else %>
         <%= link_to "Connect with Twitter", user_omniauth_authorize_path(:twitter) %>
       <% end %>
-
-
+      <%= link_to 'Sign out', destroy_user_session_path, method:'delete', class: "btn btn-danger" %>
     </div>
   </div>
 </div>
+
