--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,45 +1,38 @@
 /* -------------------------------------
  * Colors & Fonts
  * ------------------------------------- */
-$navbar-color: $gray-light;
-$navbar-hover-color: $yellow;
+$navbar-color: white;
+$navbar-hover-color: rgba(255,255,255,1);
 $navbar-font-family: $navbar-font;
 $navbar-font-size: 14px;
 $navbar-text-transform: capitalize;
 $navbar-font-weight: 300;
 $navbar-letter-spacing: 1.5px;
 $navbar-font-family: $navbar-font;
-$navbar-bg: white;
+$navbar-bg: black;
 
 /* -------------------------------------
  * Box model
  * ------------------------------------- */
 $navbar-height: 50px;
-$navbar-vertical-padding: 10px;
-$navbar-horizontal-padding: 20px;
+$navbar-vertical-padding: 5px;
+$navbar-horizontal-padding: 10px;
 $navbar-border-bottom-width: 1px;
-$navbar-border-bottom-color: $gray-lighter;
+$navbar-border-bottom-color: white;
 
 /* -------------------------------------
  * Navbar button
  * ------------------------------------- */
 $navbar-btn-height: 40px;
-$navbar-btn-bg: lightgrey;
+$navbar-btn-bg: white;
 $navbar-btn-color: white;
 $navbar-btn-horizontal-padding: 10px;
 $navbar-btn-radius: 2px;
 
-/* -------------------------------------
- * Navbar profile picture
- * ------------------------------------- */
-$navbar-profile-radius: 50%;
-$navbar-profile-border-color: white;
-$navbar-profile-border-width: 2px;
+// penser à modifier la coleur du hover qui bug et supprimer qq elements dans
+ // .navbar-nav > li > a, aussi pour diminuer la taille de la navbar
 
-/* -------------------------------------
- * SCSS code
- * ------------------------------------- */
-.navbar-wagon {
+.navbar-neg {
   background: $navbar-bg;
   font-family: $navbar-font-family;
   border: none;
@@ -63,92 +56,16 @@ $navbar-profile-border-width: 2px;
     padding-top: $navbar-vertical-padding;
     padding-bottom: $navbar-vertical-padding;
     background-color: transparent;
+    -webkit-transition: all 0.3s ease;
+       -moz-transition: all 0.3s ease;
+        -ms-transition: all 0.3s ease;
+            transition: all 0.3s ease;
   }
 
   .navbar-nav > li > a:hover,
   .navbar-nav > .open > a:hover {
-    color: $navbar-hover-color;
-    background-color: transparent;
+    color: black;
+    background-color: $navbar-hover-color;
   }
 
-  .navbar-brand,
-  .navbar-brand:hover {
-    outline: none;
-    color: $navbar-color;
-    padding-top: $navbar-vertical-padding;
-    padding-bottom: $navbar-vertical-padding;
-  }
-
-  .navbar-nav > li > a.btn {
-    line-height: $navbar-btn-height;
-    padding: 0 $navbar-btn-horizontal-padding;
-    color: $navbar-btn-color;
-    border-radius: $navbar-btn-radius;
-    margin-top: ($navbar-height + 2 * $navbar-vertical-padding - $navbar-btn-height) / 2;
-    font-weight: bold;
-    background-color: $navbar-btn-bg;
-    font-size: 12px;
-    &:hover{
-      background-color: darken($navbar-btn-bg, 30%);
-    }
-  }
-
-  .navbar-brand img, .navbar-brand svg {
-    height: $navbar-height;
-    padding: 0px;
-  }
-
-  .img-avatar{
-    border: $navbar-profile-border-width solid $navbar-profile-border-color;
-    box-shadow: 0 0 2px rgb(200, 200, 200);
-    height: $navbar-height - (2 * $navbar-profile-border-width);
-    margin-right: 10px;
-    border-radius: $navbar-profile-radius;
-  }
-
-  .navbar-toggle {
-    border-color: #dddddd;
-    width: 45px;
-    background: transparent;
-  }
-
-  .navbar-nav > li > .dropdown-menu{
-    border-radius: 0;
-    margin-top: 10px;
-  }
-
-  .navbar-nav > li > .dropdown-menu:before{
-    position: absolute;
-    background: white;
-    height: 10px;
-    width: 10px;
-    content: "\00a0";
-    display: block;
-    left: 50%;
-    margin-left: -5px;
-    top: -5px;
-    transform: rotate(45deg);
-    border-top: 1px solid #e6e6e6;
-    border-left: 1px solid #e6e6e6;
-    z-index: -1;
-  }
-}
-
-/* -------------------------------------
- * Navbar profile picture
- * ------------------------------------- */
-
-@media screen and (max-width: 768px) {
-  .navbar-wagon {
-    .navbar-brand img, .navbar-brand svg {
-      height: 50px;
-    }
-    .navbar-brand, .navbar-brand:hover
-     {
-      display: block;
-      color: $navbar-color;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-  }
 }
