--- a/app/views/layouts/_navside.html.erb
+++ b/app/views/layouts/_navside.html.erb
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse" id="example-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">Home</a>
+          <a href="/">Home</a>
         </li>
         <li>
-          <a href="#">Overview</a>
+          <a href="/artworks">Overview</a>
         </li>
         <li>
           <a href="#">Events</a>
@@ -36,12 +36,12 @@
   <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
           <li class="sidebar-brand">
-              <a href="#">
+              <a href="/">
                   Home
               </a>
           </li>
           <li>
-              <a href="#">Overview</a>
+              <a href="/artworks">Overview</a>
           </li>
           <li>
               <a href="#">Events</a>
