--- a/app/views/layouts/_navside.html.erb
+++ b/app/views/layouts/_navside.html.erb
@@ -12,6 +12,12 @@
     <div class="collapse navbar-collapse" id="example-navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
+          <% if user_signed_in? %>
+          <%= image_tag current_user.image, class: "img-avatar" %>
+          <%= current_user.name %>
+          <% end %>
+        </li>
+        <li>
           <a href="/">Home</a>
         </li>
         <li>
@@ -26,6 +32,20 @@
         <li>
           <a href="#">Contact</a>
         </li>
+        <li>
+          <% if user_signed_in? %>
+       </li>
+       <li>
+          <%= link_to 'Sign out', destroy_user_session_path, method:'delete'%>
+       </li>
+       <li>
+          <% if current_user.admin %>
+          <%= link_to "Admin", admin_root_path%>
+          <% end %>
+          <% else %>
+          <%= link_to "Log in", user_omniauth_authorize_path(:twitter)%>
+        <% end %></a>
+       </li>
       </ul>
     </div>
   </div>
@@ -35,7 +55,13 @@
   <!-- Sidebar -->
   <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
-          <li class="sidebar-brand">
+          <li>
+            <% if user_signed_in? %>
+            <%= image_tag current_user.image, class: "img-avatar" %>
+            <%= current_user.name %>
+            <% end %>
+          </li>
+          <li>
               <a href="/">
                   Home
               </a>
@@ -50,9 +76,23 @@
               <a href="#">About</a>
           </li>
           <li>
-              <a href="#">Contact</a>
+              <% if user_signed_in? %>
+          </li>
+          <li>
+        <%= link_to 'Sign out', destroy_user_session_path, method:'delete'%>
+          </li>
+          <li>
+        <% if current_user.admin %>
+          <%= link_to "Admin", admin_root_path%>
+        <% end %>
+        <% else %>
+        <%= link_to "Log in", user_omniauth_authorize_path(:twitter)%>
+      <% end %></a>
           </li>
       </ul>
   </div>
   <!-- /#sidebar-wrapper -->
-</div>
+
+
+
+
