--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -31,3 +31,33 @@
   background: $purple;
   color: white;
 }
+.border-bot {
+  padding: 10px;
+  margin: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.margin-top {
+  padding-top: 15px;
+}
+.block {
+  display: block;
+}
+.in-block {
+  display: inline-block;
+}
+
+.stream-item {
+  padding: 10px;
+  margin: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.img-tweet {
+  width: 100%;
+}
+
+.img-tweet-box {
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
