--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -52,8 +52,7 @@ outline-color: black;
 }
 
 @media(min-width:768px) {
-  .center-wos {
-    text-align: center;
-    margin-right: 185px;
+  .full-src {
+    padding-right: 185px;
   }
 }
