--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,18 +15,19 @@
   <%= render "shared/flashes" %>
   <%= render 'layouts/navside' %>
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6">
-      <h1>
-        <%= link_to "Negentropy", home_path %>
-      </h1>
+<div class="full-src">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-2">
+        <h1>
+          <%= link_to "Negentropy", home_path %>
+        </h1>
+      </div>
     </div>
   </div>
-</div>
-
 
   <%= yield %>
+</div>
 
   <%= javascript_include_tag :application %>
   <%= yield(:after_js) %>
