--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-8 col-xs-offset-2">
       <% if user_signed_in? %>
         <%= image_tag current_user.image, class: "img-avatar" %>
         <%= current_user.name %>
