--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,13 +8,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
+    <div class="col-xs-12 col-sm-6">
       <% if user_signed_in? %>
-        <%= image_tag current_user.image, class: "img-avatar" %>
-        <%= current_user.name %>
-        <%= link_to 'Sign out', destroy_user_session_path, method:'delete', class: "btn btn-danger" %>
         <% if current_user.admin %>
-          <%= link_to "Voir l'admin", admin_root_path, class: "btn btn-danger" %>
+          <%= link_to "Voir l'admin", admin_root_path, class: "btn btn-default" %>
         <% end %>
       <% else %>
         <%= link_to "Connect with Twitter", user_omniauth_authorize_path(:twitter), class: "btn btn-primary btn-lg" %>
