fixing some bug

--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -35,7 +35,8 @@
             </div>
           </div>
         </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
