--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,6 +1,3 @@
-
-<h2>Negentropy</h2>
-
 <div class="container">
 
 
@@ -12,13 +9,15 @@
   <div class="row">
       <div class="col-xs-1">
 
-              <img src="<%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.attrs[:user][:profile_image_url_original] %>">
+              <img src="<%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.attrs[:user][:profile_image_url] %>">
           </div>
           <div class="col-xs-9">
 
-              <p><strong><%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.attrs[:user][:name] %></strong></p>
-
+              <p><strong><%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.attrs[:user][:name] %></strong>
+              @<%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.attrs[:user][:screen_name] %> |
+              <%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.created_at.to_date %></p>
               <p><%= @tweets[:status].select { |twt| twt.id == tweet.in_reply_to_status_id }.first.text %></p>
+
 
       </div>
  </div>
@@ -39,7 +38,6 @@
     </div>
 
       <% end %>
-
 
   </div>
 </div>
