commit for pull, no usefull changes

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -7,8 +7,8 @@
   padding-top: 8em;
   padding-bottom: 8em;
 }
-.padding1 {
-  padding: 2px;
+.padding-right {
+  padding-right: 5px;
 }
 .bg-red {
   background: $red;
