--- a/app/views/dialogs/index.html.erb
+++ b/app/views/dialogs/index.html.erb
@@ -6,7 +6,9 @@
         <div class="stream-item">
           <div class="row">
             <div class="col-xs-1">
-              <img src="<%= d.origin_profilpic_url %>" class="img img-tweet">
+              <div class="padding-right">
+                <img src="<%= d.origin_profilpic_url %>" class="img img-tweet">
+              </div>
             </div>
             <div class="col-xs-11">
               <p><strong><%= d.origin_user %></strong>
