--- a/app/views/layouts/_navside.html.erb
+++ b/app/views/layouts/_navside.html.erb
@@ -21,7 +21,7 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/artworks">Overview</a>
+          <a href="/dialogs">Overview</a>
         </li>
         <li>
           <a href="#">Events</a>
@@ -67,7 +67,7 @@
               </a>
           </li>
           <li>
-              <a href="/artworks">Overview</a>
+              <a href="/dialogs">Overview</a>
           </li>
           <li>
               <a href="#">Events</a>
