--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <%= stylesheet_link_tag :application, media: "all" %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'pic.ico', :rel => 'shortcut icon', :type => 'image/x-icon" rel="shortcut icon' %>
 </head>
 <body>
   <%= render "shared/navbar" %>
