--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -7,6 +7,9 @@
   padding-top: 8em;
   padding-bottom: 8em;
 }
+.padding-bot {
+  padding-bottom: 2px;
+}
 .padding-right {
   padding-right: 5px;
 }
