--- a/app/views/dialogs/index.html.erb
+++ b/app/views/dialogs/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="scroll-top">Back to top</div>
 <div class="container">
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
