--- a/app/views/layouts/_navside.html.erb
+++ b/app/views/layouts/_navside.html.erb
@@ -23,16 +23,10 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/dialogs">Overview</a>
-        </li>
-        <li>
-          <a href="#">Events</a>
+          <a href="/collection">Collection</a>
         </li>
         <li>
           <a href="#">About</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
         </li>
           <% if user_signed_in? %>
        <li>
@@ -71,10 +65,7 @@
               </a>
           </li>
           <li>
-              <a href="/dialogs">Overview</a>
-          </li>
-          <li>
-              <a href="#">Events</a>
+              <a href="/collection">Collection</a>
           </li>
           <li>
               <a href="#">About</a>
