--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
           <%= link_to "Voir l'admin", admin_root_path, class: "btn btn-default" %>
         <% end %>
       <% else %>
-        <%= link_to "Connect with Twitter", user_omniauth_authorize_path(:twitter), class: "btn btn-primary btn-lg" %>
+        <%# link_to "Connect with Twitter", user_omniauth_authorize_path(:twitter), class: "btn btn-primary btn-lg" %>
       <% end %>
     </div>
   </div>
