add js for add button

--- a/app/views/dialogs/_stream.html.erb
+++ b/app/views/dialogs/_stream.html.erb
@@ -20,6 +20,8 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="img-tweet-box">
+                <div class="overlay"></div>
+                <a href="#" class="button">Add</a>
                 <img src="<%= d.img_url %>" class="img img-tweet"> 
               </div>
             </div>
