--- a/app/views/dialogs/index.html.erb
+++ b/app/views/dialogs/index.html.erb
@@ -20,8 +20,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12" >
               <div class="img-tweet-box">
+                <div class="overlay"></div>
+                <a href="#" class="button">Add</a>
                 <img src="<%= d.img_url %>" class="img img-tweet"> 
               </div>
             </div>
@@ -38,3 +40,4 @@
     </div>
   </div>
 </div>
+
