--- a/app/views/dialogs/_stream.html.erb
+++ b/app/views/dialogs/_stream.html.erb
@@ -5,10 +5,10 @@
       <% Dialog.all.each do |d| %>
         <div class="stream-item">
           <div class="row">
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-sm-1 col-sm-offset-1">
               <img src="<%= d.origin_profilpic_url %>" class="img img-tweet">
             </div>
-            <div class="col-xs-11">
+            <div class="col-xs-11 col-sm-9">
               <p><strong><%= d.origin_user %></strong>
               @<%= d.origin_screen_name %>
               <% if d.origin_date != nil %>
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="img-tweet-box">
                 <div class="overlay"></div>
                 <%= link_to "+", dialog_add_path(:dialog_id => d.id), method: :put, class: "button" %>
@@ -27,7 +27,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <p>
                 <%= d.text %>
               </p>
