--- a/app/views/layouts/_navside.html.erb
+++ b/app/views/layouts/_navside.html.erb
@@ -26,7 +26,7 @@
           <a href="/collection">Collection</a>
         </li>
         <li>
-          <a href="#">About</a>
+          <a href="#">AboutY</a>
         </li>
           <% if user_signed_in? %>
        <li>
