--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -49,9 +49,10 @@
 }
 .img-tweet {
   width: 100%;
+
 }
 .img-tweet-box {
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
   margin-bottom: 7px;
   overflow: hidden;
@@ -66,13 +67,14 @@
   opacity: 0;
 }
 .img-tweet-box:hover .overlay {
-  opacity: 0.3;
+  opacity: 0;
 }
 .img-tweet-box .button {
+  font-size: 30px;
   z-index: 1000;
   position: absolute;
-  bottom: 25px;
-  width: 100%;
+  bottom: 7px;
+  width: 10%;
   padding: 10px 0;
   background: black;
   text-align: center;
@@ -80,4 +82,13 @@
   font-family: sans-serif;
   text-decoration: none;
   display: none;
+}
+
+#origin_tweet_box {
+  background-color: #F8F8F8;
+
+}
+
+#origin_tweet_text {
+  padding-bottom: -10px;
 }
