--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,7 +8,7 @@ h1 {
   display: inline-block;
   padding: 10px;
   margin: 10px;
-  font-weight: 250;
+  font-weight: 100;
   font-size: 30px;
 }
 
@@ -28,8 +28,8 @@ text-decoration: none;
 }
 
 a:hover, a:focus {
-color: white;
-background-color: black;
+color: grey;
+// background-color: black;
 // text-decoration: none;
 }
 
