--- a/app/views/dialogs/collection.html.erb
+++ b/app/views/dialogs/collection.html.erb
@@ -1,25 +1,28 @@
-<div class="container">
+<div class="container padding-top">
   <div class="row">
-    <p><u>Collection</u></p>
-      Artists: <% @dialogs.each do |t| %>
+    <p class="padding-bottom"><u>Collection</u></p>
+    <p>Artists: <% @dialogs.each do |t| %>
       <%= t.text.match(/(?<=: )(.*?),/) %>
       <% end %>
+    </p>
+    <div class="stream-item-lt"></div>
     <% @dialogs.each do |d| %>
-            <div class="stream-item">
+
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-4">
                   <div class="img-tweet-box">
                     <img src="<%= d.img_url %>" class="img img-tweet"> 
                   </div>
 
-                  <div class="col-xs-6">
+                  <div class="col-xs-4">
                     <div class="img-tweet-box">
                       <%= d.text.match(/(?<=: )(.*?),/) %>
                     </div>
-                  </div>
+
                 </div>
               </div>
             </div>
+
           <% end %>
   </div>
 </div>
