--- a/app/views/dialogs/collection.html.erb
+++ b/app/views/dialogs/collection.html.erb
@@ -2,21 +2,30 @@
   Artists: <% @dialogs.each do |t| %>
   <%= t.text.match(/(?<=: )(.*?),/) %>
   <% end %>
-<% @dialogs.each do |d| %>
+  <div class="container">
+    <div class="row">
+      <% @dialogs.each do |d| %>
         <div class="stream-item">
-          <div class="row">
-            <div class="col-xs-4">
-              <div class="img-tweet-box">
-                <img src="<%= d.img_url %>" class="img img-tweet"> 
+          <div class="col-xs-6">
+            <div class="row">
+              <div class="col-xs-4">
+                <div class="img-tweet-box">
+                  <img src="<%= d.img_url %>" class="img img-tweet"> 
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-4">
-              <p>
-                <%= d.text %>
-              </p>
+            <div class="row">
+              <div class="col-xs-4">
+                <p>
+                  <%= d.text %>
+                </p>
+              </div>
             </div>
           </div>
         </div>
       <% end %>
+    </div>
+  </div>
+
+
+<!-- ca bug, corriger le css -->
