--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
           <li>
             <input type="search" placeholder="Search..." id="searchbar">
           </li>
+          <li>
+            <%= link_to "Connect with Facebook", user_omniauth_authorize_path(:facebook) %>
+          </li>
           <li class="dropdown">
             <%= link_to "#", {class: "dropdown-toggle", "data-toggle" => "dropdown", "role" => "button", "aria-expanded" => "false"} do %>
                 <% if user_signed_in? %>
@@ -24,7 +27,7 @@
                   <%= current_user.name %>
                 <% else %>
                 <div id="login_button">
-                  <%= link_to "Log in", user_omniauth_authorize_path(:twitter) %></div>
+                  <%= link_to "twitter connect", user_omniauth_authorize_path(:twitter) %></div>
                 <% end %>
               <%# image_tag "http://lorempixel.com/30/30/people", class: "img-avatar" %>
               <span class="caret"></span>
