change collectin front-end

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -22,6 +22,9 @@
 .padding-right {
   padding-right: 5px;
 }
+.padding-left {
+  padding-left: 10px;
+}
 .bg-red {
   background: $red;
   color: white;
