search + _stream + Artwork + Artist

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -114,13 +114,22 @@ $navbar-profile-border-width: 0.5px;
 
 }
 
-#searchbar {
-  margin-top: 10px;
-  margin-right: 30px;
-  padding-left: 100px;
-  vertical-align: left;
+// #searchbar {
+//   margin-top: 10px;
+//   margin-right: 30px;
+//   padding-left: 100px;
+//   vertical-align: left;
+//   border: none;
+//   height: 35px;
+// }
+
+#artist {
+  // margin-top: 10px;
+  // margin-right: 30px;
+  // padding-left: 100px;
+  // vertical-align: left;
   border: none;
-  height: 35px;
+  // height: 35px;
 }
 
 #login_button {
