--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Artists#index</h1>
+<h1>Artists</h1><br>
  <% @artists.each do |artist| %>
   <% if artist.name != nil %>
-    <%= artist.name %>
+    <%= artist.name %> |
     <% end %>
   <% end %>
