--- a/app/assets/stylesheets/pages/_collection.scss
+++ b/app/assets/stylesheets/pages/_collection.scss
@@ -4,8 +4,11 @@
 .pad-left {
   padding-left: 20px;
 }
+.pad-left2{
+  padding-left: 180px;
+}
 .pad-right {
-  padding-right: 200px;
+  padding-right: 180px;
 }
 #cards {
   /* Prevent vertical gaps */
