--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,13 @@
   </div>
 </div>
 
-  <div class="container">
+<!--   <div class="container">
     <div class="row">
       <div class="col-xs-8 col-xs-offset-2">
 
       </div>
     </div>
-  </div>
+  </div> -->
 
   <%= yield %>
 <!-- </div> -->
