minor + Gallery model

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -132,6 +132,11 @@ $navbar-profile-border-width: 0.5px;
   // height: 35px;
 }
 
+.search_function em {
+  background-color: yellow;
+  font-style: normal;
+}
+
 #login_button {
   height: 20px;
   margin-right: 10px;
