--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,9 @@
                   displayKey: 'name',
                   templates: {
                     suggestion: function(hit) {
-                      return hit._highlightResult.name.value;
+                      return "<div class='search_function'>"
+                      + hit._highlightResult.name.value +
+                      "</div>";
                     }
                   }
                 });
